# pimpmyterm

./: .gitignore  Dockerfile  LICENSE  README.md  config.ini  installer.sh  launch_tests.sh  mkdocs.yml  pimpmyterm.sh  pyproject.toml  tests.sh  utils.sh
.github/workflows/: tests.yml
assets/: CatppuccinMocha.json
config/neovim/: colorschemes.lua  custom_opts.lua
config/zsh/: p10k.zsh  zshrc
docs/: pimpmyterm.md  utils.md
docs/css/: extra.css
docs/libs/: common.md  config.md  os.md  package_apt.md  package_file.md  packages.md  profile.md  script.md
font/: readme.txt
libs/: common.sh  config.sh  os.sh  package_apt.sh  package_file.sh  packages.sh  profile.sh  script.sh
libs/src/: common.sh  config.sh  os.sh  package_apt.sh  package_file.sh  packages.sh  profile.sh
profiles/: example.ini  pimpmyterm.ini
scripts/: batcat.sh  vscode.sh  wsl_backup.ps1  wsl_install_font.ps1  wsl_install_theme.ps1  wsl_restore.ps1
tests/: test_common.py  test_config.py  test_installer.py  test_os.py  test_package_apt.py  test_package_file.py  test_packages.py  test_profile.py
tests/config/: config_profile.ini  config_profile_not_exists.ini
tests/profiles/: profile.ini
themes/: blue.sh  dark.sh  default.sh  minimalist.sh
