[tool.poetry]
name = "pimpmyterm"
version = "1.0.0"
description = ""
authors = ["Christopher LOUËT"]
license = "MIT"
readme = "README.md"
packages = [{include = "tests"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.3"
pytest-shell = "^0.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
