[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pimpmyterm"
version = "1.0.0"
description = ""
authors = ["Christopher LOUËT"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/christopherlouet/pimpmyterm"
packages = [{include = "tests/*.py"}]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.11"
mkdocs-include-dir-to-nav = "^1.2.0"

[tool.poetry.group.test]
[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-shell = "^0.3.2"
